--- a/podfile
+++ b/podfile
@@ -12,7 +12,7 @@ pod 'Firebase/Core'
 pod 'Firebase/Database'
 pod 'Firebase/Auth'
 pod 'Firebase/Storage'
-
+pod 'Charts'
 
 
   target 'PowerPlantTests' do
